--- a/app.html
+++ b/app.html
@@ -121,7 +121,7 @@ box-shadow:0 0 30px rgba(59,130,246,.5);
 
 <!-- FEEDS PLACEHOLDER -->
 
-<div id="feedsPage" class="page" style="display:block;">
+<div id="feedsPage" class="page">
 <h2>📰 Feeds</h2>
 <div class="card subText">
 Feeds are in the main feed page.
@@ -144,7 +144,7 @@ Feeds are in the main feed page.
 
 <!-- PROFILE -->
 
-<div id="profilePage" class="page">
+<div id="profilePage" class="page" style="display:block;">
 
 <div style="display:flex;justify-content:space-between;">
 <h2>👤 My Profile</h2>
