--- a/feeds.html
+++ b/feeds.html
@@ -116,7 +116,7 @@ font-size:13px;
 color:#94a3b8;
 }
 
-/* BOTTOM NAV */
+/* NAV */
 
 .bottomnav{
 position:fixed;
@@ -153,25 +153,19 @@ font-weight:800;
 
 <body>
 
-<!-- LOGIN PAGE -->
-
-
-
-</div>
-
-</div>
-
-<!-- FEEDS PAGE -->
+<!-- FEEDS -->
 
 <div id="feedsPage" class="page">
 
 <div class="topbar">
+
 <div>
 <div class="title">📰 Crew Feeds</div>
 <div class="subText">Logged in as: <span id="who"></span></div>
 </div>
 
 <button class="danger" onclick="logout()">Logout</button>
+
 </div>
 
 <div class="card">
@@ -197,26 +191,28 @@ style="width:100%;margin-top:10px;border-radius:16px;display:none;">
 
 </div>
 
-<!-- FRIENDS PAGE -->
+
+<!-- FRIENDS -->
 
 <div id="friendsPage" class="page">
 <h2>👥 Friends</h2>
 <div class="card subText">Friends feature coming soon</div>
 </div>
 
-<!-- MESSAGES PAGE -->
+
+<!-- MESSAGES -->
 
 <div id="messagesPage" class="page">
 <h2>💬 Messages</h2>
 <div class="card subText">Messenger coming soon</div>
 </div>
 
-<!-- BOTTOM NAV -->
+
+<!-- NAV -->
 
 <div class="bottomnav">
 
-<button class="active"
-onclick="showPage('feedsPage',this)">
+<button class="active" onclick="showPage('feedsPage',this)">
 📰 Feeds
 </button>
 
@@ -234,17 +230,16 @@ onclick="showPage('feedsPage',this)">
 
 </div>
 
+
 <script type="module">
 
-import { initializeApp }
+import { initializeApp } 
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
 onAuthStateChanged,
-signOut,
-signInWithEmailAndPassword,
-createUserWithEmailAndPassword
+signOut
 }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
@@ -262,6 +257,7 @@ updateDoc,
 where
 }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -282,6 +278,7 @@ let isPosting=false;
 const feedsList=document.getElementById("feedsList");
 const who=document.getElementById("who");
 
+
 /* NAVIGATION */
 
 window.showPage=function(id,btn){
@@ -298,6 +295,7 @@ if(btn) btn.classList.add("active");
 
 };
 
+
 /* AUTH */
 
 onAuthStateChanged(auth,(user)=>{
@@ -312,71 +310,24 @@ currentEmail=user.email;
 
 who.innerText=currentEmail;
 
-loadFeeds();
-
-});
-
-if(!user){
-
-document.getElementById("loginPage").style.display="block";
-document.getElementById("feedsPage").style.display="none";
-return;
-
-}
-
-document.getElementById("loginPage").style.display="none";
-document.getElementById("feedsPage").style.display="block";
-
-currentUID=user.uid;
-currentEmail=user.email;
-
-who.innerText=currentEmail;
+showPage("feedsPage");
 
 loadFeeds();
 
 });
 
-/* LOGIN */
-
-window.login=async function(){
-
-const email=document.getElementById("loginEmail").value;
-const password=document.getElementById("loginPassword").value;
-
-try{
-await signInWithEmailAndPassword(auth,email,password);
-}catch(e){
-alert(e.message);
-}
-
-}
-
-/* SIGNUP */
-
-window.signup=async function(){
-
-const email=document.getElementById("loginEmail").value;
-const password=document.getElementById("loginPassword").value;
-
-try{
-await createUserWithEmailAndPassword(auth,email,password);
-alert("Account created. Now login.");
-}catch(e){
-alert(e.message);
-}
-
-}
 
 /* LOGOUT */
 
 window.logout=async function(){
 await signOut(auth);
-location.reload();
-}
+location.href="index.html";
+};
+
 
 /* CREATE POST */
 
-window.createFeed = async function(){
+window.createFeed=async function(){
 
 if(isPosting) return;
 
@@ -394,14 +345,6 @@ try{
 const text=document.getElementById("feedInput").value.trim();
 const file=document.getElementById("feedPhoto").files[0];
 
-if(!text && !file){
-alert("Write something or choose a photo");
-btn.disabled=false;
-btn.innerText="Post";
-isPosting=false;
-return;
-}
-
 let photoURL="";
 
 if(file){
@@ -418,12 +361,6 @@ const data=await res.json();
 
 if(data.success){
 photoURL=data.data.url;
-}else{
-alert("Photo upload failed");
-btn.disabled=false;
-btn.innerText="Post";
-isPosting=false;
-return;
 }
 
 }
@@ -448,22 +385,24 @@ msg.innerText="✅ Posted";
 
 btn.disabled=false;
 btn.innerText="Post";
+
 isPosting=false;
 
 setTimeout(()=>msg.innerText="",2000);
 
 }catch(e){
 
-console.log(e);
 alert("Post failed");
 
 btn.disabled=false;
 btn.innerText="Post";
+
 isPosting=false;
 
 }
 
 };
+
 
 /* LOAD FEEDS */
 
@@ -542,6 +481,7 @@ loadComments(id);
 
 }
 
+
 /* LIKE */
 
 window.toggleLike=async function(id){
@@ -559,7 +499,8 @@ likes.push(currentUID);
 
 await updateDoc(ref,{likes});
 
-}
+};
+
 
 /* DELETE POST */
 
@@ -569,7 +510,8 @@ if(confirm("Delete post?")){
 await deleteDoc(doc(db,"feeds",id));
 }
 
-}
+};
+
 
 /* COMMENTS */
 
@@ -592,7 +534,8 @@ createdAt:Date.now()
 
 input.value="";
 
-}
+};
+
 
 function loadComments(feedId){
 
@@ -601,6 +544,7 @@ const q=query(collection(db,"comments"),where("feedId","==",feedId));
 onSnapshot(q,(snap)=>{
 
 const box=document.getElementById("comments-"+feedId);
+
 if(!box) return;
 
 box.innerHTML="";
@@ -634,19 +578,22 @@ Delete
 
 }
 
+
 window.deleteComment=async function(id){
 
 if(confirm("Delete comment?")){
 await deleteDoc(doc(db,"comments",id));
 }
 
-}
+};
+
 
 /* IMAGE PREVIEW */
 
 document.getElementById("feedPhoto").addEventListener("change",function(){
 
 const file=this.files[0];
+
 if(!file) return;
 
 const reader=new FileReader();
