--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ text-align:center;
 
 </div>
 
-
 <script type="module">
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp } 
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
@@ -119,7 +119,6 @@ messagingSenderId: "402383997556",
 appId: "1:402383997556:web:d4b5894b25545ecaef9f21"
 };
 
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
@@ -135,7 +134,6 @@ function safeNameFromEmail(e){
 const s=(e||"").toLowerCase();
 return s.includes("@") ? s.split("@")[0] : "User";
 }
-
 
 async function ensureUserDoc(user){
 
@@ -155,6 +153,7 @@ createdAt:Date.now()
 
 }
 
+/* AUTO LOGIN REDIRECT */
 
 onAuthStateChanged(auth, async (user)=>{
 
@@ -162,11 +161,14 @@ if(user){
 
 await ensureUserDoc(user);
 
-location.replace("app.html");
+/* after login go to feeds */
+location.replace("feeds.html");
 
 }
 
 });
+
+/* LOGIN */
 
 window.login = async ()=>{
 
@@ -180,9 +182,6 @@ email.value,
 password.value
 );
 
-/* redirect after login */
-location.href="feeds.html";
-
 }catch(e){
 
 setMsg("");
@@ -190,9 +189,9 @@ alert(e.message);
 
 }
 
-}
 };
 
+/* SIGNUP */
 
 window.signup = async ()=>{
 
