--- a/app.html
+++ b/app.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -76,20 +75,6 @@ font-size:13px;
 color:#94a3b8;
 }
 
-/* ONLINE RING */
-
-.profileRing{
-display:inline-block;
-padding:3px;
-border-radius:50%;
-}
-
-.profileRing.online{
-box-shadow:0 0 0 3px #22c55e;
-}
-
-/* NAV */
-
 .bottomnav{
 position:fixed;
 bottom:15px;
@@ -119,12 +104,23 @@ color:#3b82f6;
 font-weight:800;
 }
 
-#profilePhoto{
-width:120px;
-height:120px;
+/* ONLINE RING */
+
+.profileRing{
+display:inline-block;
+padding:4px;
 border-radius:50%;
-object-fit:cover;
-border:4px solid #e5e7eb;
+}
+
+.profileRing.online{
+border:3px solid #22c55e;
+animation:pulseRing 2s infinite;
+}
+
+@keyframes pulseRing{
+0%{box-shadow:0 0 0 0 rgba(34,197,94,.6);}
+70%{box-shadow:0 0 0 10px rgba(34,197,94,0);}
+100%{box-shadow:0 0 0 0 rgba(34,197,94,0);}
 }
 
 </style>
@@ -132,7 +128,7 @@ border:4px solid #e5e7eb;
 
 <body>
 
-<!-- PROFILE PAGE -->
+<!-- PROFILE -->
 
 <div id="profilePage" class="page" style="display:block;">
 
@@ -146,7 +142,8 @@ border:4px solid #e5e7eb;
 <div id="profileRing" class="profileRing">
 
 <img id="profilePhoto"
-src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+src="https://i.ibb.co/2kRZ7Z6/avatar.png"
+style="width:120px;height:120px;border-radius:50%;object-fit:cover;border:4px solid #e5e7eb;">
 
 </div>
 
@@ -169,9 +166,46 @@ style="color:#6b7280"></div>
 
 </div>
 
+<!-- PROFESSIONAL INFO -->
+
+<div class="card">
+
+<div style="display:flex;justify-content:space-between;">
+<div style="font-weight:900">Professional Information</div>
+
+<button class="light" onclick="toggleInfo()" id="infoBtn">
+Show
+</button>
 </div>
 
-<!-- NAVIGATION -->
+<div id="infoSection" style="display:none;margin-top:12px">
+
+<div class="subText">Email</div>
+<div id="profileEmail"></div>
+
+<div class="subText">Company</div>
+<div id="profileCompany"></div>
+
+<div class="subText">Vessel</div>
+<div id="profileVessel"></div>
+
+<div class="subText">Experience</div>
+<div id="profileExperience"></div>
+
+<div class="subText">Phone</div>
+<div id="profilePhone"></div>
+
+<div class="subText">Address</div>
+<div id="profileAddress"></div>
+
+</div>
+</div>
+
+<div id="documentsList"></div>
+
+</div>
+
+<!-- NAV -->
 
 <div class="bottomnav">
 
@@ -195,16 +229,15 @@ style="color:#6b7280"></div>
 
 <script type="module">
 
-import { initializeApp } from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { initializeApp }
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
 onAuthStateChanged,
 signOut
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
@@ -213,8 +246,7 @@ getDoc,
 setDoc,
 updateDoc
 }
-from
-"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -228,8 +260,6 @@ const db=getFirestore(app);
 
 let currentUID=null;
 
-const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
-
 onAuthStateChanged(auth,async(user)=>{
 
 if(!user){
@@ -239,23 +269,28 @@ return;
 
 currentUID=user.uid;
 
-setOnline(true);
+await updateDoc(doc(db,"users",currentUID),{
+online:true,
+lastActive:Date.now()
+});
 
 loadProfile();
 
 });
 
-async function setOnline(state){
+/* SET OFFLINE WHEN LEAVE PAGE */
+
+window.addEventListener("beforeunload",async()=>{
+
+if(currentUID){
 
 await updateDoc(doc(db,"users",currentUID),{
-online:state,
+online:false,
 lastActive:Date.now()
 });
 
 }
 
-window.addEventListener("beforeunload",()=>{
-setOnline(false);
 });
 
 async function loadProfile(){
@@ -263,15 +298,6 @@ async function loadProfile(){
 const snap=await getDoc(doc(db,"users",currentUID));
 
 const d=snap.data()||{};
-
-if(d.photo){
-profilePhoto.src=d.photo;
-}
-
-profileName.innerText=d.name||"";
-profileRank.innerText=d.rank||"";
-
-/* ONLINE RING */
 
 const ring=document.getElementById("profileRing");
 
@@ -281,43 +307,28 @@ ring.classList.add("online");
 ring.classList.remove("online");
 }
 
+if(d.photo){
+profilePhoto.src=d.photo;
 }
 
-document.getElementById("photoInput")
-.addEventListener("change",async function(){
+profileName.innerText=d.name||"";
+profileRank.innerText=d.rank||"";
 
-const file=this.files[0];
-if(!file) return;
+profileEmail.innerText=d.email||"";
+profileCompany.innerText=d.company||"-";
+profileVessel.innerText=d.vessel||"-";
+profileExperience.innerText=d.experience||"-";
+profilePhone.innerText=d.phone||"-";
+profileAddress.innerText=d.address||"-";
 
-const reader=new FileReader();
-
-reader.onload=function(e){
-profilePhoto.src=e.target.result;
-};
-
-reader.readAsDataURL(file);
-
-const formData=new FormData();
-formData.append("image",file);
-
-const res=await fetch(
-"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
-{method:"POST",body:formData}
-);
-
-const data=await res.json();
-
-const imageUrl=data.data.url;
-
-await setDoc(doc(db,"users",currentUID),{
-photo:imageUrl
-},{merge:true});
-
-alert("Photo uploaded successfully");
-
-});
+}
 
 window.logout=async function(){
+
+await updateDoc(doc(db,"users",currentUID),{
+online:false,
+lastActive:Date.now()
+});
 
 await signOut(auth);
 
