--- a/app.html
+++ b/app.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -111,19 +112,14 @@ font-weight:800;
 
 /* ONLINE RING */
 
-.avatarWrapper{
-position:relative;
-display:inline-block;
-}
-
-.onlineRing{
-position:absolute;
-top:-4px;
-left:-4px;
-right:-4px;
-bottom:-4px;
+.avatarRing{
+display:inline-flex;
+justify-content:center;
+align-items:center;
+padding:6px;
 border-radius:50%;
-border:3px solid #22c55e;
+border:4px solid #22c55e;
+box-shadow:0 0 20px rgba(34,197,94,.6);
 }
 
 #profilePhoto{
@@ -131,6 +127,7 @@ width:120px;
 height:120px;
 border-radius:50%;
 object-fit:cover;
+display:block;
 }
 
 </style>
@@ -147,12 +144,9 @@ object-fit:cover;
 
 <div class="card" style="text-align:center">
 
-<div class="avatarWrapper">
-<div class="onlineRing"></div>
-
+<div class="avatarRing">
 <img id="profilePhoto"
 src="https://i.ibb.co/2kRZ7Z6/avatar.png">
-
 </div>
 
 <br><br>
@@ -173,8 +167,6 @@ style="font-size:24px;font-weight:900"></div>
 style="color:#6b7280"></div>
 
 </div>
-
-<!-- PROFESSIONAL INFO -->
 
 <div class="card">
 
@@ -209,20 +201,10 @@ Show
 </div>
 </div>
 
-<!-- NAVIGATION -->
-
 <div class="bottomnav">
 
 <button onclick="location.href='feeds.html'">
 📰 Feeds
-</button>
-
-<button>
-👥 Friends
-</button>
-
-<button>
-💬 Messages
 </button>
 
 <button class="active">
@@ -297,7 +279,6 @@ loadProfile();
 async function loadProfile(){
 
 const snap=await getDoc(doc(db,"users",currentUID));
-
 const d=snap.data()||{};
 
 if(d.photo){
