--- a/message.html
+++ b/message.html
@@ -6,135 +6,121 @@
 <title>SeaConnect - Messages</title>
 
 <style>
-body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-  background:linear-gradient(180deg,#0f172a,#1e293b);
-  color:#f1f5f9;
+body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;background:linear-gradient(180deg,#0f172a,#1e293b);color:#f1f5f9;}
+.page{padding:20px;padding-bottom:95px;}
+.card{background:rgba(255,255,255,0.06);backdrop-filter:blur(12px);border:1px solid rgba(255,255,255,0.08);padding:18px;border-radius:22px;margin-bottom:16px;box-shadow:0 10px 30px rgba(0,0,0,.35);}
+
+.chatHeader{display:flex;align-items:center;gap:12px;margin-bottom:12px;}
+
+.avatarWrapper{
+position:relative;
+width:50px;
+height:50px;
 }
 
-/* Pages */
-.page{
-  padding:20px;
-  padding-bottom:95px;
+.avatarWrapper img{
+width:50px;
+height:50px;
+border-radius:50%;
+object-fit:cover;
 }
 
-/* Glass Card */
-.card{
-  background:rgba(255,255,255,0.06);
-  backdrop-filter:blur(12px);
-  border:1px solid rgba(255,255,255,0.08);
-  padding:15px;
-  border-radius:22px;
-  margin-bottom:12px;
+.onlineRing{
+position:absolute;
+top:0;
+left:0;
+width:50px;
+height:50px;
+border-radius:50%;
+border:2px solid #22c55e;
+pointer-events:none;
 }
 
-/* Avatar */
-.avatar-container{
-  position:relative;
-  width:45px;
-  height:45px;
+.chatBox{
+height:55vh;
+overflow-y:auto;
+margin-bottom:12px;
 }
 
-.avatar{
-  width:45px;
-  height:45px;
-  border-radius:50%;
-  object-fit:cover;
-}
-
-/* Online indicator thin ring */
-.online-ring{
-  position:absolute;
-  top:0;
-  left:0;
-  width:45px;
-  height:45px;
-  border-radius:50%;
-  border:2px solid #22c55e;
-  pointer-events:none;
-}
-
-/* Chat Layout */
-.chat-container{
-  height:60vh;
-  overflow-y:auto;
-  margin-bottom:10px;
-}
-
-/* Message Bubble */
 .message{
-  display:flex;
-  margin-bottom:10px;
+display:flex;
+margin-bottom:10px;
 }
 
 .message.me{
-  justify-content:flex-end;
+justify-content:flex-end;
 }
 
 .bubble{
-  max-width:65%;
-  padding:10px 14px;
-  border-radius:20px;
-  font-size:14px;
+max-width:70%;
+padding:10px 14px;
+border-radius:20px;
+font-size:14px;
+word-wrap:break-word;
 }
 
 .me .bubble{
-  background:#3b82f6;
-  color:white;
-  border-bottom-right-radius:5px;
+background:#3b82f6;
+color:#fff;
+border-bottom-right-radius:6px;
 }
 
 .other .bubble{
-  background:rgba(255,255,255,0.1);
-  border-bottom-left-radius:5px;
+background:rgba(255,255,255,0.1);
+border-bottom-left-radius:6px;
 }
 
-/* Input area */
-.input-area{
-  display:flex;
-  gap:8px;
+.inputRow{
+display:flex;
+gap:10px;
 }
 
 input{
-  flex:1;
-  padding:10px;
-  border-radius:20px;
-  border:none;
-  outline:none;
+flex:1;
+padding:12px;
+border-radius:14px;
+border:1px solid rgba(255,255,255,0.15);
+background:rgba(255,255,255,0.05);
+color:#fff;
 }
 
 button{
-  padding:10px 16px;
-  border:none;
-  border-radius:20px;
-  background:#22c55e;
-  color:white;
-  cursor:pointer;
+padding:12px 18px;
+border:none;
+border-radius:14px;
+font-weight:700;
+cursor:pointer;
+background:linear-gradient(135deg,#3b82f6,#2563eb);
+color:#fff;
 }
 
-/* Bottom Navigation */
-.nav{
-  position:fixed;
-  bottom:0;
-  left:0;
-  right:0;
-  height:70px;
-  background:#0f172a;
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-  border-top:1px solid rgba(255,255,255,0.1);
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:rgba(15,23,42,0.9);
+backdrop-filter:blur(10px);
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+box-shadow:0 10px 40px rgba(0,0,0,.6);
 }
 
-.nav a{
-  color:#94a3b8;
-  text-decoration:none;
-  font-size:14px;
+.bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+font-weight:600;
+color:#94a3b8;
 }
 
-.nav a.active{
-  color:#22c55e;
+.bottomnav button.active{
+color:#3b82f6;
+font-weight:800;
 }
 </style>
 </head>
@@ -143,69 +129,114 @@ button{
 
 <div class="page">
 
-  <h2>Messages</h2>
+<h2>💬 Messages</h2>
 
-  <!-- Chat Card -->
-  <div class="card">
+<div class="card">
 
-    <!-- Chat Header -->
-    <div style="display:flex; align-items:center; gap:10px; margin-bottom:10px;">
-      <div class="avatar-container">
-        <img id="chatAvatar" class="avatar" src="https://via.placeholder.com/45" />
-        <div class="online-ring"></div>
-      </div>
-      <div>
-        <strong id="chatName">Crew Mate</strong><br>
-        <small style="color:#22c55e;">Online</small>
-      </div>
-    </div>
-
-    <!-- Messages -->
-    <div class="chat-container" id="chatBox">
-    </div>
-
-    <!-- Input -->
-    <div class="input-area">
-      <input type="text" id="messageInput" placeholder="Type message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
-
-  </div>
-
+<div class="chatHeader">
+<div class="avatarWrapper">
+<img id="chatAvatar" src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+<div class="onlineRing"></div>
+</div>
+<div>
+<div id="chatName" style="font-weight:900;">Crew Mate</div>
+<div style="color:#22c55e;font-size:13px;">Online</div>
+</div>
 </div>
 
-<!-- Navigation -->
-<div class="nav">
-  <a href="feeds.html">Feeds</a>
-  <a href="message.html" class="active">Messages</a>
-  <a href="app.html">Profile</a>
+<div class="chatBox" id="chatBox"></div>
+
+<div class="inputRow">
+<input type="text" id="messageInput" placeholder="Type message...">
+<button onclick="sendMessage()">Send</button>
 </div>
 
-<script>
-let chatBox = document.getElementById("chatBox");
+</div>
+</div>
 
-function sendMessage(){
-  let input = document.getElementById("messageInput");
-  let text = input.value.trim();
-  if(text === "") return;
+<div class="bottomnav">
+<button onclick="location.href='feeds.html'">📰 Feeds</button>
+<button class="active">💬 Messages</button>
+<button onclick="location.href='app.html'">👤 Profile</button>
+</div>
 
-  let messageDiv = document.createElement("div");
-  messageDiv.className = "message me";
-  messageDiv.innerHTML = `<div class="bubble">${text}</div>`;
-  chatBox.appendChild(messageDiv);
+<script type="module">
 
-  input.value="";
-  chatBox.scrollTop = chatBox.scrollHeight;
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+import { getFirestore, doc, getDoc, collection, addDoc, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  // Simulated reply
-  setTimeout(()=>{
-    let reply = document.createElement("div");
-    reply.className = "message other";
-    reply.innerHTML = `<div class="bubble">Roger that, Captain ⚓</div>`;
-    chatBox.appendChild(reply);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  },1000);
+const firebaseConfig={
+apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
+authDomain:"seaconnect-d2baa.firebaseapp.com",
+projectId:"seaconnect-d2baa"
+};
+
+const app=initializeApp(firebaseConfig);
+const auth=getAuth(app);
+const db=getFirestore(app);
+
+let currentUID=null;
+let chatId="global_chat"; // simple global chat first
+
+onAuthStateChanged(auth,async(user)=>{
+if(!user){
+location.href="index.html";
+return;
 }
+currentUID=user.uid;
+loadMyProfile();
+loadMessages();
+});
+
+async function loadMyProfile(){
+const snap=await getDoc(doc(db,"users",currentUID));
+const data=snap.data();
+if(data?.photo){
+document.getElementById("chatAvatar").src=data.photo;
+}
+document.getElementById("chatName").innerText=data?.name||"SeaCrew";
+}
+
+window.sendMessage=async function(){
+
+const input=document.getElementById("messageInput");
+const text=input.value.trim();
+if(!text) return;
+
+await addDoc(collection(db,"messages"),{
+chatId:chatId,
+sender:currentUID,
+text:text,
+createdAt:Date.now()
+});
+
+input.value="";
+};
+
+function loadMessages(){
+
+const q=query(collection(db,"messages"),orderBy("createdAt"));
+
+onSnapshot(q,(snapshot)=>{
+const chatBox=document.getElementById("chatBox");
+chatBox.innerHTML="";
+
+snapshot.forEach(docSnap=>{
+const msg=docSnap.data();
+if(msg.chatId!==chatId) return;
+
+let div=document.createElement("div");
+div.className="message "+(msg.sender===currentUID?"me":"other");
+
+div.innerHTML=`<div class="bubble">${msg.text}</div>`;
+chatBox.appendChild(div);
+});
+
+chatBox.scrollTop=chatBox.scrollHeight;
+});
+}
+
 </script>
 
 </body>
